# simple_cmake_config

./: .gitignore  CMakeLists.txt  README.md  glad.cpp  main.cpp  todos.cpp  todos.h
include/glad/: glad.h
